tests/baselines/reference/asyncFunctionExpression6.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression6.ts(6,35): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression6.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var foo = async function(a = await): Promise<void> {
                                      ~
!!! error TS1109: Expression expected.
    }